--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Minha Primeira Página Web</h1>
-    <p id="demo">Este é um parágrafo.</p>
+    <h1>Minha Prova</h1>
+    <p id="demo">Bem Vindo.</p>
     <button onclick="mudarTexto()">Clique aqui!</button>
     <script src="script.js"></script>
 </body>
