--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Minha Prova</h1>
     <p id="demo">Bem Vindo.</p>
-    <button onclick="mudarTexto()">Clique aqui!</button>
+    <button onclick="mudarTexto()">ir</button>
     <script src="script.js"></script>
 
 
